<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ContainerRestaurant-Android</string>
    <string name="home">홈</string>
    <string name="feed">피드</string>
    <string name="map">지도</string>
    <string name="my">마이</string>
    <string name="title_activity_feed_write">FeedWriteActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="home_toolbar_title">모두의 용기</string>
    <string name="home_intro_title">뭐든 처음이\n어려운 법이죠</string>
    <string name="my_container">나의 용기</string>
    <string name="all_container">모두의 용기</string>
    <string name="home_container_history">용기낸 특별한 경험들</string>
    <string name="more_feed_history">더 보러가기</string>
    <string name="app_mail_phrase">용기낸 식당 %s</string>
    <string name="app_mail" tools:ignore="Typos">container.restaurant1@gmail.com</string>
    <string name="feed_search">피드탐색</string>
    <string name="feed_write">용기낸 피드쓰기</string>
    <string name="restaurant_name">식당 이름</string>
    <string name="food_category">음식 카테고리</string>
    <string name="detail_list">상세내역</string>
    <string name="main_menu">메인 음식</string>
    <string name="food">음식</string>
    <string name="container">용기</string>
    <string name="side_menu">사이드 음식</string>
    <string name="count">수량</string>
    <string name="optional_input">(선택입력)</string>
    <string name="optional_details">(선택사항)</string>
    <string name="add_menu">음식 추가하기</string>
    <string name="write_main_menu_hint">제육볶음</string>
    <string name="write_main_menu_container_hint">1L 스테인리스 용기</string>
    <string name="write_side_menu_count_hint">ex. 5개</string>
    <string name="write_side_menu_container_hint">ex. 3칸 칸막이 1개</string>
    <string name="level">난이도</string>
    <string name="owner_likes_multi_disposable">사장님이 다회용기를 환영했어요!</string>
    <string name="write_courageous_experience">용기낸 경험담을 들려주세요</string>
    <string name="write_content_hint">용기 구성 팁등 타인에게 용기를 줄 수 있는 소감을 적어주세요 :)</string>
    <string name="write_content_caption">* 무관한 내용이나 욕설 등 부적절한 내용은 통보 없이 삭제될 수 있습니다.</string>
    <string name="upload">저장하기</string>
    <string name="korean_food">한식</string>
    <string name="midnight_snack">야식</string>
    <string name="chinese_food">중식</string>
    <string name="snack">분식</string>
    <string name="fast_food">패스트푸드</string>
    <string name="asian_or_western_food">아시안/양식</string>
    <string name="cafe_or_dessert">카페/디저트</string>
    <string name="cutlet_or_japanese_food">돈까스/회/일식</string>
    <string name="chicken_or_pizza">치킨/피자</string>
    <string name="need_kakao_signin">선택하신 기능은\n간편로그인 후 이용할 수 있어요!</string>
    <string name="kakao_login">카카오 로그인</string>
    <string name="login_nickname">용기낸 식당에 어서오세요!\n닉네임만 정하면 가입이 끝나요 :)</string>
    <string name="complete">작성 완료</string>
    <string name="nickname_too_long">더 짧은 닉네임을 사용해주세요</string>
    <string name="nickname_too_short">더 긴 닉네임을 사용해주세요</string>
    <string name="nickname_empty">닉네임을 입력해주세요</string>
    <string name="nickname_possible">사용 가능한 닉네임 입니다</string>
    <string name="nickname_letter_impossible">한글/영문/숫자 또는 공백만 입력해주세요</string>
    <string name="nickname_duplication">닉네임이 이미 존재합니다.</string>
    <string name="all_feed_title">우주같이 웅장한\n용기를 가진 분</string>
    <string name="all_feed_sub_title">세상을 바꾸는\n특별한 용기를 가진 분들</string>
    <string name="confirm">확인</string>
    <string name="error_message_bad_gateway">서버 오류입니다.</string>
    <string name="error_message_other">알 수 없는 오류가 발생했습니다.</string>

    <string name="all_container_help">우주같이 웅장한 용기를 가진 분은\n
<b>최근 30일간 피드를 가장 많이 작성한 순</b>\n
으로 보여지며, 매일 1회 업데이트 됩니다.
\n\n
세상을 바꾸는 특별한 용기를 가진 분들은\n
<b>가장 최근 피드를 작성한 순</b>으로 보여지며,\n
실시간으로 업데이트 됩니다.</string>
    <string name="user_profile">프로필 조회</string>
    <string name="nickname">닉네임</string>
    <string name="my_page">마이 페이지</string>
    <string name="brave_level">용기낸 레벨</string>
    <string name="my_feed">내 피드</string>
    <string name="scrap_feed">스크랩 피드</string>
    <string name="favorite_restaurant">찜한 식당</string>
    <string name="sign_in_hint">닉네임을 입력해주세요.</string>
    <string name="banner_image">배너 이미지</string>
    <string name="home_empty_feed">아직 작성된 피드가 없어요!</string>
    <string name="empty_data_info">피드 데이터가 없습니다</string>
    <string name="recommended_feed_thumbnail_image">추천 피드 썸네일 이미지</string>
    <string name="like_button">좋아요 버튼</string>
    <string name="back">뒤로 가기</string>
    <string name="user_profile_image">프로필 이미지</string>
    <string name="profile_empty_data">아직 용기낸 횟수가 없어요!</string>
    <string name="empty_profile_lv1">LV1. 텀블러</string>
    <string name="empty_profile_lv2">LV2. 밥그릇</string>
    <string name="empty_profile_lv3">LV3. 금 용기</string>
    <string name="empty_profile_lv4">LV4. 후라이팬</string>
    <string name="empty_profile_lv5">LV5. 냄비</string>
    <string name="difficulty_lv1">쉬워요</string>
    <string name="difficulty_lv2">할 만 해요</string>
    <string name="difficulty_lv3">보통이에요</string>
    <string name="difficulty_lv4">까다로워요</string>
    <string name="difficulty_lv5">많이 어려워요</string>
    <string name="brave_count">%d회 용기냈어요</string>
    <string name="settings">설정</string>
    <string name="user_profile_edit">프로필 이미지 수정</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="privacy_policy">개인정보 취급방침</string>
    <string name="empty_scrap_feed">스크랩한 피드가 아직 없어요!</string>
    <string name="empty_my_feed">아직 용기낸 횟수가 없어요!</string>
    <string name="empty_favorite_restaurant">찜한 식당이 아직 없어요!</string>
    <string name="terms_of_service">서비스 이용약관</string>
    <string name="change_name">닉네임 수정</string>
    <string name="nickname_not_changed">기존의 닉네임과 다른 닉네임을 입력해주세요.</string>
    <string name="alarm_receiving_setting">알림 수신 설정</string>
    <string name="sign_out">로그아웃</string>
    <string name="withdrawal">계정 탈퇴</string>
    <string name="app_version">앱 버전</string>
    <string name="feed_image">피드 이미지</string>
    <string name="heart">좋아요</string>

    <string name="on_boarding_title1">누군가가 먼저\n용기낸 식당을 확인해요!</string>
    <string name="on_boarding_title2">음식별 용기구성\n팁을 얻을 수 있어요.</string>
    <string name="on_boarding_title3">직접 용기낸 경험담과\n식당을 공유하고</string>
    <string name="on_boarding_title4">용기낸 횟수를\n캐릭터로 확인해요.</string>
    <string name="on_boarding_sub_title1">내 주변 15분 거리의 식당들 중\n누군가 먼저 용기냈던 식당을 확인할 수 있어요.</string>
    <string name="on_boarding_sub_title2">피드에서 포장하려는 음식의\n용기 크기 및 구성 팁을 얻을 수 있어요.</string>
    <string name="on_boarding_sub_title3">피드 작성으로 용기낸 경험담을 공유하면\n자동으로 지도에 용기낸 식당이 등록돼요.</string>
    <string name="on_boarding_sub_title4">용기낸 경험담을 공유한 횟수에 따라\n레벨업이 되고 캐릭터가 바뀌어요</string>
    <string name="on_boarding_file_name1">on_boarding1.json</string>
    <string name="on_boarding_file_name2">on_boarding2.json</string>
    <string name="on_boarding_file_name3">on_boarding3.json</string>
    <string name="on_boarding_file_name4">on_boarding4.json</string>

    <string name="restaurant_name_hint">\'식당명\' 또는 \'지역 + 식당명\' 입력</string>
    <string name="search">검색하기</string>
    <string name="welcome_mark">다회용기 환영 마크</string>
    <string name="add_photo">사진 추가</string>
    <string name="main_food_example_hint">ex. 제육볶음</string>
    <string name="main_container_example_hint">ex. 1L 스테인리스 용기</string>
    <string name="side_count_example_hint">ex. 단무지, 멸치 볶음</string>
    <string name="side_container_example_hint">ex. 3칸 칸막이 1개</string>
    <string name="close">닫기</string>
    <string name="erase">지우기</string>
    <string name="more">더보기</string>
    <string name="share">공유하기</string>
    <string name="enter_comment_info">댓글을 남겨주세요.</string>
    <string name="register">등록</string>
    <string name="comment_icon">댓글 아이콘</string>
    <string name="container_restaurant">용기낸 식당</string>
    <string name="take_out_level">포장 난이도</string>
    <string name="main_menu_icon">메인 음식 아이콘</string>
    <string name="comment">댓글</string>
    <string name="next_step">다음 단계</string>
    <string name="begin">시작하기</string>
    <string name="skip"><u>건너뛰기</u></string>
    <string name="home_my_profile_img">내 프로필 이미지</string>

</resources>