<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="container.restaurant.android.data.MainMenu" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_box"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:textAppearance="@style/TextAppearance.App.B.Gray07"
                android:textSize="14dp"
                tools:ignore="SpUsage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23.5dp"
                android:gravity="center"
                android:text="@string/food" />

            <EditText
                android:id="@+id/et_menu_name"
                android:textSize="14dp"
                tools:ignore="SpUsage"
                android:importantForAutofill="no"
                android:inputType="text"
                android:fontFamily="@font/spoqa_hans_sans_regular"
                android:textColorHint="@color/gray_04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:hint="@string/main_food_example_hint"
                android:backgroundTint="@android:color/transparent"
                android:text="@={item.menuName}" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="15dp"
            android:src="@color/gray_03"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:textAppearance="@style/TextAppearance.App.B.Gray07"
                android:textSize="14dp"
                tools:ignore="SpUsage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="23.5dp"
                android:text="@string/container" />

            <EditText
                android:id="@+id/et_container"
                android:layout_width="match_parent"
                android:textSize="14dp"
                tools:ignore="SpUsage"
                android:fontFamily="@font/spoqa_hans_sans_regular"
                android:textColorHint="@color/gray_04"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:hint="@string/main_container_example_hint"
                android:backgroundTint="@android:color/transparent"
                android:text="@={item.container}"
                android:importantForAutofill="no"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

</layout>
