<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.my.ChangeNameFragment">
    <data>
        <variable
            name="viewModel"
            type="container.restaurant.android.presentation.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_top_navigation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                style="@style/TextAppearance.App.B.Gray07"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/change_name"
                android:gravity="center"
                android:textSize="16sp"
                android:includeFontPadding="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_chevron_left_outline"
                android:backgroundTint="@color/black"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/back" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/edit_nickname"
            style="@style/TextAppearance.App.R.Gray05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="131dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/sign_in_hint"
            android:textColor="@color/gray_07"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textColorHint="@color/gray_05"
            android:background="@android:color/transparent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_top_navigation"
            android:importantForAutofill="no"
            android:inputType="text" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="44dp"
            android:background="@color/gray_04"
            app:layout_constraintTop_toBottomOf="@+id/edit_nickname"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            style="@style/TextAppearance.App.R.Gray06"
            android:id="@+id/tv_nickname_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="12sp"
            android:text="@{viewModel.infoMessage}"
            tools:text="한글/영문/숫자만 입력해 주세요"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_complete"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:backgroundTint="@color/selector_write_complete_button"
            android:textColor="@color/selector_write_complete_button_text"
            android:text="@string/complete"
            android:textSize="16sp"
            android:fontFamily="@font/spoqa_hans_sans_bold"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="@{()->viewModel.onCompleteButtonClick()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
